--- a/pos/index.html
+++ b/pos/index.html
@@ -5,13 +5,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<link rel="stylesheet" href="/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="./jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css">
 
 <!-- <link rel="stylesheet" href="themes/mwcminiprojecttheme.min.css" /> -->
 <!-- <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" /> -->
 
-<script src="/jquery-2.1.4.min.js"></script>
-<script src="/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="jquery-2.1.4.min.js"></script>
+<script src="./jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <script src="cordova.js"></script>
 
 </script>
