--- a/pos/index.html
+++ b/pos/index.html
@@ -59,10 +59,10 @@
           }
             cordova.plugins.barcodeScanner.scan(
                 function (result) {
-                  alert("We got a barcode\n" +
-          "Result: " + result.text + "\n" +
-          "Format: " + result.format + "\n" +
-          "Cancelled: " + result.cancelled);
+          //         alert("We got a barcode\n" +
+          // "Result: " + result.text + "\n" +
+          // "Format: " + result.format + "\n" +
+          // "Cancelled: " + result.cancelled);
                     getProduct(result.text);
                     // not to self, for web testing
                     // getProduct("83012016");
